--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -67,7 +67,7 @@
         app:errorEnabled="true"
         app:endIconMode="password_toggle"
         app:layout_constraintTop_toBottomOf="@+id/email_l"
-        app:layout_constraintBottom_toTopOf="@id/btn"
+        app:layout_constraintBottom_toTopOf="@id/signUp"
         >
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/passwd"
@@ -79,11 +79,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn"
-        android:layout_width="100dp"
+        android:id="@+id/signUp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
-        android:text="Sign up"
-        android:background="@drawable/btn"
+        android:text="@string/sign_up"
+        android:background="@drawable/btn3"
         android:layout_marginTop="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
