--- a/app/src/main/res/layout/recycler_entertainment.xml
+++ b/app/src/main/res/layout/recycler_entertainment.xml
@@ -13,8 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="5dp"
-        android:background="@color/funTime"
-        >
+        android:background="@drawable/recycle_back">
+<!--  На задний фон должно передаваться изображение из базы для каждого типа-->
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/entertainment_type"
             android:layout_width="0dp"
