--- a/app/src/main/res/layout/fragment_searching.xml
+++ b/app/src/main/res/layout/fragment_searching.xml
@@ -3,54 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
->
+    android:paddingHorizontal="15dp"
+    android:background="@drawable/back">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/edit_text"
         android:layout_height="wrap_content"
-        android:text="Search by name"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        android:layout_marginVertical="25sp"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/name"
-        />
+        android:layout_width="match_parent"
+        android:paddingHorizontal="5dp"
+        app:startIconDrawable="@drawable/ic_search"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:background="@drawable/btn"
-        android:hint="@string/name"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/recycler"
-        app:layout_constraintEnd_toStartOf="@id/signUp"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_txt"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Search"
+            android:background="@drawable/btn"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/signUp"
+            />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signUp"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
-        android:background="@drawable/btn"
-        android:text="Search"
-        app:layout_constraintBottom_toTopOf="@id/recycler"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/txt"
-        app:layout_constraintVertical_bias="0.567" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginVertical="15dp"
-        app:layout_constraintTop_toBottomOf="@id/name"
+        android:layout_marginVertical="35dp"
+        app:layout_constraintTop_toBottomOf="@id/edit_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
