--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:inputType="text"
-        android:hint="@string/lastname"
+        android:hint="@string/email"
         android:background="@drawable/btn"
         />
     </com.google.android.material.textfield.TextInputLayout>
