--- a/app/src/main/res/layout/recycler_company.xml
+++ b/app/src/main/res/layout/recycler_company.xml
@@ -42,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_place_24"
+            android:paddingEnd="10dp"
             app:layout_constraintTop_toBottomOf="@+id/company_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +50,11 @@
             />
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/region"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/recycleText"
             android:text="region"
             app:layout_constraintStart_toEndOf="@id/place_img"
-            app:layout_constraintEnd_toStartOf="@id/star_img"
             app:layout_constraintTop_toBottomOf="@id/company_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_chainStyle="spread" />
@@ -64,6 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_star_half"
+            android:paddingStart="25dp"
+            android:paddingEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/rate"
             app:layout_constraintStart_toEndOf="@id/region"
@@ -77,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="3.5"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/favorite_img"
+            app:layout_constraintStart_toEndOf="@id/star_img"
             app:layout_constraintTop_toBottomOf="@id/company_name"
             app:layout_constraintVertical_bias="0.0" />
 
